# kitchcu

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py  openapi_aggregate.py  rate_limit.py
services/gateway/tests/: test_gateway.py  test_openapi_aggregate.py  test_rate_limit.py
services/identity/: Dockerfile  alembic.ini  pyproject.toml
services/identity/alembic/: env.py
services/identity/alembic/versions/: 001_initial_identity.py  002_kitchen_whatsapp.py  003_platform_admins.py  004_customers_oauth.py  005_delivery_fee_rules.py  006_customer_payout.py  008_feature_flags.py  (+14 more)
services/identity/app/: admin_audit.py  admin_routes.py  brand_media.py  customer_dashboard.py  customer_routes.py  customer_schemas.py  discovery.py  internal_routes.py  main.py  models.py  oauth.py  otp_delivery.py  rbac.py  referral.py  referral_routes.py  routes.py  schemas.py
services/identity/tests/: conftest.py  test_admin_branded_page.py  test_admin_employees.py  test_admin_kitchen_integrations.py  test_admin_ops_controls.py  test_admin_password_sync.py  test_auth.py  test_branded_page.py  test_customer_auth.py  test_customer_flag_enforcement.py  test_customer_payout.py  test_discovery_home.py  test_events.py  test_feature_flags_enforcement.py  test_health.py  test_internal_subscription.py  test_kitchen_module_flags.py  test_kitchens.py  test_owners.py  test_platform_api_keys.py  test_referral_events.py  test_referrals.py  test_schemas.py  test_whatsapp_integration.py
services/order/: Dockerfile  pyproject.toml
services/order/alembic/: env.py
services/order/app/: analytics.py  catalog_client.py  cost_share.py  coupon_client.py  customer_dashboard.py  delivery_fee_payment.py  deps.py  identity_referral_client.py  llm_parser.py  main.py  models.py  notify_client.py  parser.py  payment_gate.py  porter_auto_book.py  porter_client.py  porter_webhook.py  receipts.py  routes.py  schemas.py
services/order/tests/: conftest.py  events_bootstrap.py  test_analytics.py  test_customer_orders.py  test_drafts.py  test_events.py  test_health.py  test_master_orders.py  test_orders.py  test_parser.py  test_porter_auto_book.py  test_receipt_pdf.py  test_receipts.py  test_schemas.py  test_stock_deduct_on_ready.py
(+595 files in other folders)
