[project]
name = "ckac-identity"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ckac-common",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "alembic>=1.13",
    "geoalchemy2>=0.15",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4", "pytest-cov>=5.0", "asgi-lifespan>=2.1"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
