[project]
name = "ckac-order"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ckac-common",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "asgi-lifespan>=2.1", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
